[gd_scene load_steps=2 format=3 uid="uid://hofj61q8bm3q"]

[ext_resource type="Script" uid="uid://ds3lt06yib5q0" path="res://control.gd" id="1_n2q7d"]

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2q7d")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.32549)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "FIN DEL JUEGO"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Â¿VOLVER A INTENTAR?"

[node name="MenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Regresar al menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
